crates/ink/tests/ui/contract/fail/cfg-forbidden-usage-02.stderr
error: The feature `std` is not allowed in `cfg`.

       Allowed in `#[cfg(…)]`:
       - `test`
       - `feature` (without `std`)
       - `any`
       - `not`
       - `all`
  --> tests/ui/contract/fail/cfg-forbidden-usage-02.rs:16:19
   |
16 |         #[cfg(not(feature = "std"))]
   |                   ^^^^^^^
